--- a/index.html
+++ b/index.html
@@ -4,18 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QuickPOS - Point of Sale System</title>
-    <meta name="description" content="Modern point of sale system with inventory and customer management" />
-    <meta name="author" content="Lovable" />
-
-    <meta property="og:title" content="QuickPOS - Point of Sale System" />
-    <meta property="og:description" content="Modern point of sale system with inventory and customer management" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <title>QuickPOS - Smart Point of Sale System for Modern Businesses</title>
+    <meta name="description" content="QuickPOS is a modern, easy-to-use point of sale system with powerful inventory tracking, customer management, and real-time reporting." />
+    <meta name="keywords" content="point of sale system, POS software, QuickPOS, inventory management, sales system, customer tracking, retail POS, business POS" />
+    <meta name="author" content="Jay Ramoliya" />
+    <link rel="icon" href="/public/application.png" type="image/x-icon" />
   </head>
 
   <body>
