--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="jMYxgKBDG9M9IKUtHqzGZZDLelB9olM3rWpTa87JNC0" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QuickPOS - Smart Point of Sale System for Modern Businesses</title>
